cluster/apps/networking/externalroutes/nas0-externalroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas0-externalname
  namespace: networking
spec:
  type: ExternalName
  ports:
  - name: http
    port: 5000 
  externalName: "${NAS0_IP}"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nas0-externalroute
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik 
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`nas0.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: nas0
          namespace: networking
          kind: Service
          port: 5000
          scheme: http
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
