cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint-externalname
  namespace: networking
spec:
  type: ExternalName
  ports:
  - name: http
    port: 80 
  externalName: "${OCTOPRINT_IP}"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: octoprint-externalroute
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik 
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`octoprint.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: octoprint-externalname
          namespace: networking
          kind: Service
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
