cluster/apps/networking/externalroutes/plex-externalroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-externalname
  namespace: networking
spec:
  type: ExternalName
  ports:
  - name: http
    port: 5000 
  externalName: "${PLEX_IP}"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-externalroute
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik 
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`plex.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      services:
        - name: plex-externalname
          namespace: networking
          kind: Service
          port: 32400
          scheme: http
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
